--- a/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -115,11 +115,10 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button *ngIf="!isAdd" type="button" (click)="deleteTrabajo()" class="btn btn-danger"
-      data-bs-dismiss="modal">Borrar</button>
-    <button *ngIf="isAdd" type="button" class="btn btn-danger" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" (click)="onSubmit()" [disabled]="formExp.invalid || isUploading"
-      class="btn btn-primary">Guardar</button>
+    <button *ngIf="!isAdd" type="button" (click)="deleteTrabajo()" class="btn btn-danger"><i class="fa-solid fa-trash"></i> Borrar</button>
+    <button *ngIf="isAdd" type="button" class="btn btn-danger" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" (click)="onSubmit(); modal.dismiss()" [disabled]="formExp.invalid || isUploading"
+      class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
 </ng-template>
 
@@ -134,8 +133,8 @@
     <span class="text-danger">Esta operacion no se puede deshacer.</span>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" class="btn btn-danger" (click)="deleteTrabajoDb()">Borrar</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" class="btn btn-danger" (click)="deleteTrabajoDb(); modal.dismiss()"><i class="fa-solid fa-trash"></i> Borrar</button>
 
   </div>
 </ng-template>
