--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -85,9 +85,9 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button *ngIf="!isAdd" type="button" (click)="deleteProyecto()" class="btn btn-danger" data-bs-dismiss="modal">Borrar</button>
-    <button *ngIf="isAdd"type="button" class="btn btn-danger" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" (click)="onSubmit()" [disabled]="formProyect.invalid" class="btn btn-primary">Guardar</button>
+    <button *ngIf="!isAdd" type="button" (click)="deleteProyecto()" class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-trash-can"></i> Borrar</button>
+    <button *ngIf="isAdd"type="button" class="btn btn-danger" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" (click)="onSubmit(); modal.dismiss()" [disabled]="formProyect.invalid" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
 </ng-template>
 
@@ -102,7 +102,7 @@
     <span class="text-danger">Esta operacion no se puede deshacer.</span>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" class="btn btn-danger" (click)="deleteProyectoDb()">Borrar</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" class="btn btn-danger" (click)="deleteProyectoDb()"><i class="fa-solid fa-trash-can"></i> Borrar</button>
   </div>
 </ng-template>
