--- a/src/app/components/skill/skill.component.html
+++ b/src/app/components/skill/skill.component.html
@@ -70,9 +70,9 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button *ngIf="!isAdd" type="button" (click)="deleteSkill()" class="btn btn-danger" data-bs-dismiss="modal">Borrar</button>
-    <button *ngIf="isAdd"type="button" class="btn btn-danger" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" (click)="onSubmit()" [disabled]="formSkill.invalid" class="btn btn-primary">Guardar</button>
+    <button *ngIf="!isAdd" type="button" (click)="deleteSkill()" class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-trash"></i> Borrar</button>
+    <button *ngIf="isAdd"type="button" class="btn btn-danger" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" (click)="onSubmit();modal.dismiss()" [disabled]="formSkill.invalid" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
 </ng-template>
 
@@ -87,7 +87,7 @@
     <span class="text-danger">Esta operacion no se puede deshacer.</span>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()">Cancelar</button>
-    <button type="button" class="btn btn-danger" (click)="deleteSkillDb()">Borrar</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" class="btn btn-danger" (click)="deleteSkillDb()"><i class="fa-solid fa-trash"></i> Borrar</button>
   </div>
 </ng-template>
