--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -155,7 +155,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" (click)="modal.dismiss()" class="btn btn-danger"><i class="fa-solid fa-ban"></i> Cancelar</button>
-    <button type="button" (click)="onSubmit()" [disabled]="formPerso.invalid || isUploading"
+    <button type="button" (click)="onSubmit(); modal.dismiss() " [disabled]="formPerso.invalid || isUploading"
       class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
 </ng-template>
