--- a/src/app/components/redes-sociales/redes-sociales.component.html
+++ b/src/app/components/redes-sociales/redes-sociales.component.html
@@ -66,7 +66,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" (click)="modal.dismiss()" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-    <button type="button" (click)="onSubmit(); modal.dismiss()" [disabled]="formRedes.invalid" class="btn btn-primary">Guardar</button>
+    <button type="button" (click)="modal.dismiss()" class="btn btn-danger" data-bs-dismiss="modal"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" (click)="onSubmit(); modal.dismiss()" [disabled]="formRedes.invalid" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
 </ng-template>
