--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -4,24 +4,24 @@
       <div class="redes">
         <app-redes-sociales></app-redes-sociales>
       </div>
-      <img *ngIf="personaDto.urlBanner == ''" src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg"
+      <img *ngIf="personaDto?.urlBanner == ''" src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg"
         class="img-fluid" alt="Responsive image">
-      <img *ngIf="personaDto.urlBanner != ''" [src]="personaDto.urlBanner" class="img-fluid" alt="Responsive image">
+      <img *ngIf="personaDto?.urlBanner != '' && personaDto?.urlBanner != undefined" [src]="personaDto.urlBanner" class="img-fluid" alt="Responsive image">
       <span *ngIf="isLogged" class="click" (click)="editarBanner()"><i class="fas fa-edit fa-xl"></i></span>
     </div>
     <div class="avatar">
-      <img *ngIf="personaDto.urlAvatar != ''" class="img-responsive" [src]="personaDto.urlAvatar">
-      <img *ngIf="personaDto.urlAvatar == ''" class="img-responsive" src="../../../assets/avatar.png">
+      <img *ngIf="personaDto?.urlAvatar != '' && personaDto?.urlAvatar != undefined"  class="img-responsive" [src]="personaDto.urlAvatar">
+      <img *ngIf="personaDto?.urlAvatar == ''" class="img-responsive" src="../../../assets/avatar.png">
       <span *ngIf="isLogged" class="click" (click)="editarAvatar()"><i class="fas fa-edit fa-xl"></i></span>
-      <h2>{{personaDto.titulo}}</h2>
+      <h2>{{personaDto?.titulo}}</h2>
     </div>
     <div class="nombre">
-      <h1>{{personaDto.nombre + " " + personaDto.apellido}}</h1>
+      <h1>{{personaDto?.nombre + " " + personaDto?.apellido}}</h1>
       <h3>{{edad}} Años</h3>
-      <h4>{{personaDto.localidad}}</h4>
-      <h5>Email: {{personaDto.email}}</h5>
+      <h4>{{personaDto?.localidad}}</h4>
+      <h5>Email: {{personaDto?.email}}</h5>
       <div class="acerca">
-        <p>{{personaDto.acerca_de}}</p>
+        <p>{{personaDto?.acerca_de}}</p>
       </div>
     </div>
     <div class="editar">
@@ -37,7 +37,7 @@
     <h5 class="modal-title" *ngIf="editAvatar && !editPerso ">Cambiar imagen del avatar:</h5>
     <h5 class="modal-title" *ngIf="!editAvatar  && !editPerso">Cambiar imagen del Banner:</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-      (click)="modal.dismiss()"></button>
+      (click)="modal.dismiss(); cancel()"></button>
   </div>
   <div class="modal-body mx-3">
     <form class="md-form mb-5" [formGroup]="formPerso" (ngSubmit)="onSubmit()">
@@ -140,21 +140,21 @@
       <div class="upload" *ngIf="!editPerso">
         <div class="logoImagen">
           <img *ngIf="uploadImg" src="{{imagenes[0]}}">
-          <img *ngIf="personaDto.urlAvatar != '' && !deleteImg && editAvatar" [src]="personaDto.urlAvatar">
-          <img *ngIf="personaDto.urlBanner != '' && !deleteImg && !editAvatar" [src]="personaDto.urlBanner">
-          <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagen($event)" id="inputFile">
+          <img *ngIf="personaDto.urlAvatar != '' && !deleteImg && editAvatar && !uploadImg" [src]="personaDto.urlAvatar">
+          <img *ngIf="personaDto.urlBanner != '' && !deleteImg && !editAvatar && !uploadImg" [src]="personaDto.urlBanner">
+          <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagenAvatar($event)" id="inputFileAvatar">
         </div>
         <label *ngIf="isUploading" class="uploadImage"> Subiendo Imagen</label>
         <div class="buttonUpload">
-          <label for="inputFile" class="custom-file-upload"><i class="fa-solid fa-cloud-arrow-up"></i> Cambiar Imagen</label> &nbsp;
-          <label *ngIf="personaDto.urlAvatar != ''" (click)="borrarImagen()" class="custom-file-delete"><i class="fa-solid fa-trash-can"></i> Borrar
+          <label for="inputFileAvatar" class="custom-file-upload"><i class="fa-solid fa-cloud-arrow-up"></i> Cambiar Imagen</label> &nbsp;
+          <label *ngIf="personaDto.urlAvatar != '' && cancelImgUrl == '' && deleteImgUrl == ''" (click)="borrarImagen()" class="custom-file-delete"><i class="fa-solid fa-trash-can"></i> Borrar
             Imagen</label>
         </div>
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" (click)="modal.dismiss()" class="btn btn-danger"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button type="button" (click)="modal.dismiss(); cancel()" class="btn btn-danger"><i class="fa-solid fa-ban"></i> Cancelar</button>
     <button type="button" (click)="onSubmit(); modal.dismiss() " [disabled]="formPerso.invalid || isUploading"
       class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
