--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div *ngIf="isLogged" class="inputImage">
-  <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagen($event)" id="inputFile">
+  <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagenProyecto($event)" id="inputFileProyecto">
 </div>
 
 <!-- MODAL FORM ADD/EDIT-->
