Modulo de idiomas implementado satisfactoriamente

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,6 +5,8 @@
 <br>
 <app-educacion></app-educacion>
 <br>
+<app-idioma></app-idioma>
+<br>
 <app-skill></app-skill>
 <br>
 <app-proyecto></app-proyecto>
