--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -121,7 +121,7 @@
   <div class="modal-footer">
     <button *ngIf="!isAdd" type="button" (click)="deleteEducacion()" class="btn btn-danger"
       data-bs-dismiss="modal"><i class="fa-solid fa-trash-can"></i> Borrar</button>
-    <button *ngIf="isAdd" type="button" class="btn btn-danger" (click)="modal.dismiss()"><i class="fa-solid fa-ban"></i> Cancelar</button>
+    <button *ngIf="isAdd" type="button" class="btn btn-danger" (click)="modal.dismiss(); cancel()"><i class="fa-solid fa-ban"></i> Cancelar</button>
     <button type="button" (click)="onSubmit(); modal.dismiss()" [disabled]="formEdu.invalid ||isUploading"
       class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Guardar</button>
   </div>
