--- a/src/app/components/encabezado/encabezado.component.css
+++ b/src/app/components/encabezado/encabezado.component.css
@@ -78,6 +78,7 @@ position: absolute;
 
 .banner img{
   max-width: 100%;
+  border-radius: 15px;
 }
 
 .editar{
@@ -89,41 +90,6 @@ position: absolute;
 
 #inputFileAvatar {
   display: none;
-}
-
-.custom-file-upload {
-  border: 1px solid #ccc;
-  background-color: #0b5bd2;
-  color: #fff;
-  display: inline-block;
-  padding: 6px 12px;
-  cursor: pointer;
-  user-select: none;
-}
-
-.uploadImage{
-  display:flex;
-  justify-content:center;
-  color:rgb(18, 90, 18);
-  size:16px;
-}
-
-.custom-file-delete {
-  border: 1px solid #ccc;
-  background-color: #d20b0b;
-  color: #fff;
-  display: inline-block;
-  padding: 6px 12px;
-  cursor: pointer;
-  user-select: none;
-}
-
-.custom-file-upload:active {
-  transform: scale(0.9);
-}
-
-.custom-file-delete:active {
-  transform: scale(0.9);
 }
 
 .logoImagen {
