--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -4,14 +4,14 @@
       <div class="redes">
         <app-redes-sociales></app-redes-sociales>
       </div>
-      <img *ngIf="personaDto?.urlBanner == ''" src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg"
+      <img *ngIf="personaDto?.urlBanner == '' || personaDto?.urlBanner == null" src="../../../assets/vecteezybanner-backgroundbk0421_generated.jpg"
         class="img-fluid" alt="Responsive image">
       <img *ngIf="personaDto?.urlBanner != '' && personaDto?.urlBanner != undefined" [src]="personaDto.urlBanner" class="img-fluid" alt="Responsive image">
       <span *ngIf="isLogged" class="click" (click)="editarBanner()"><i class="fas fa-edit fa-xl"></i></span>
     </div>
     <div class="avatar">
       <img *ngIf="personaDto?.urlAvatar != '' && personaDto?.urlAvatar != undefined"  class="img-responsive" [src]="personaDto.urlAvatar">
-      <img *ngIf="personaDto?.urlAvatar == ''" class="img-responsive" src="../../../assets/avatar.png">
+      <img *ngIf="personaDto?.urlAvatar == '' || personaDto?.urlAvatar == null" class="img-responsive" src="../../../assets/avatar.png">
       <span *ngIf="isLogged" class="click" (click)="editarAvatar()"><i class="fas fa-edit fa-xl"></i></span>
       <h2>{{personaDto?.titulo}}</h2>
     </div>
@@ -140,8 +140,8 @@
       <div class="upload" *ngIf="!editPerso">
         <div class="logoImagen">
           <img *ngIf="uploadImg" src="{{imagenes[0]}}">
-          <img *ngIf="personaDto.urlAvatar != '' && !deleteImg && editAvatar && !uploadImg" [src]="personaDto.urlAvatar">
-          <img *ngIf="personaDto.urlBanner != '' && !deleteImg && !editAvatar && !uploadImg" [src]="personaDto.urlBanner">
+          <img *ngIf="personaDto.urlAvatar != '' && editAvatar && !uploadImg" [src]="personaDto.urlAvatar">
+          <img *ngIf="personaDto.urlBanner != '' && !editAvatar && !uploadImg" [src]="personaDto.urlBanner">
           <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagenAvatar($event)" id="inputFileAvatar">
         </div>
         <label *ngIf="isUploading" class="uploadImage"> Subiendo Imagen</label>
