--- a/src/app/components/idioma/idioma.component.html
+++ b/src/app/components/idioma/idioma.component.html
@@ -33,6 +33,9 @@
           <p *ngIf="nombreIdioma?.hasError('required')" class="text-danger">
             Elija un idioma.
           </p>
+          <p *ngIf="formExpIdioma.get('nombreIdioma')?.errors?.['existe']"  class="text-danger">
+            Ese idioma ya fue agregado.
+          </p>
         </div>
         <br>
         <button type="button" (click)="nuevaIdioma()" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i>
