--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,15 +1,11 @@
 <app-top-bar></app-top-bar>
-<app-encabezado></app-encabezado>
-<br>
-<app-experiencia-laboral></app-experiencia-laboral>
-<br>
-<app-educacion></app-educacion>
-<br>
-<app-idioma></app-idioma>
-<br>
-<app-skill></app-skill>
-<br>
-<app-proyecto></app-proyecto>
-<br>
+<body>
+  <app-encabezado></app-encabezado>
+  <app-experiencia-laboral></app-experiencia-laboral>
+  <app-educacion></app-educacion>
+  <app-idioma></app-idioma>
+  <app-skill></app-skill>
+  <app-proyecto></app-proyecto>
+  <br>
+</body>
 <app-footer></app-footer>
-
