--- a/src/app/components/skill/skill.component.html
+++ b/src/app/components/skill/skill.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-xxl">
   <div class="add">
     <h1 class="display-3">Hard & Soft Skills</h1>
     <button *ngIf="isLogged" class="btn btn-outline-success btn-lg" type="button" (click)="onAdd()">
