--- a/src/app/components/idioma-item/idioma-item.component.css
+++ b/src/app/components/idioma-item/idioma-item.component.css
@@ -5,13 +5,13 @@
   padding-right: 15px;
 }
 
-.tem h3{
+.item h3{
   font-size:32px;
 }
 
 .item li {
   margin-left: 75px;
-  font-size:28px;
+  font-size:24px;
   list-style:disc;
 }
 
