--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-xxl">
   <div class="add">
     <h1 class="display-3">Proyectos</h1>
     <button *ngIf="isLogged" class="btn btn-outline-success btn-lg" type="button" (click)="onAdd()">
